add basic framework types add audio and clock input implementations add dome output and OPC driver add (incomplete) radial visualizer add Main viewmodel

--- a/WinHue/MainWindow.xaml
+++ b/WinHue/MainWindow.xaml
@@ -4,9 +4,22 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WinHue"
+        xmlns:pages="clr-namespace:WinHue.Pages"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="WinHue" Height="450" Width="800">
+  <Window.DataContext>
+    <local:Main />
+  </Window.DataContext>
+  <Grid>
+    <TabControl ItemsSource="{Binding Pages}">
+      <TabControl.ItemTemplate>
+        <DataTemplate DataType="pages:IPage">
+          <Label Content="{Binding Title}" />
+        </DataTemplate>
+      </TabControl.ItemTemplate>
+      <TabControl.Resources>
+        <DataTemplate></DataTemplate>
+      </TabControl.Resources>
+    </TabControl>
+  </Grid>
 </Window>
