--- a/WinHue/App.xaml
+++ b/WinHue/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WinHue.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WinHue"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WinHue">
     <Application.Resources>
          
     </Application.Resources>
